bamf (0.4.0daily12.12.05-0ubuntu2) raring; urgency=low

  [ Didier Roche ]
  * Remove wrong build-dep from -dbg on libbamf0

  [ Marco Trevisan (Treviño) ]
  * Remove the unneeded libbamf0.symbols and libbamf0.install
  * Update libbamf3.symbols removing the indicator functions
  * Remove the unneeded library dependencies on libwnck
  * Bump the SONAME
  * Update the package version to libbamf3-1

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 05 Dec 2012 17:34:41 +0100

bamf (0.4.0daily12.12.05-0ubuntu1) raring; urgency=low

  [ Michael Terry ]
  * New upstream release
  * debian/control:
    - Update Bzr-Vcs
    - Build-Depend on dh-autoreconf
    - Bump needed debhelper to 9 and add some Build-Depends for tests
  * debian/rules:
    - Call dh_autoreconf
    - Switch to dh9, thereby enabling tests

  [ Marco Trevisan (Treviño) ]
  * Bumping version to 0.4.0
  * debian/control:
    - Removed the gtk2 dependencies and packages
    - Dependency on libglib2.0-dev updated to match the configure.ac value
  * debian/rules:
    - Removed the unneded dh overrides

  [ Didier Roche ]
  * Automatic snapshot from revision 494 (bootstrap)

  [ Automatic PS uploader ]
  * Automatic snapshot from revision 502

 -- Automatic PS uploader <ps-jenkins@lists.canonical.com>  Wed, 05 Dec 2012 09:26:30 +0000

bamf (0.3.4-0ubuntu1) quantal-proposed; urgency=low

  [ Timo Jyrinki ]
  * New upstream release.
    - Autoconf: Make libunity-webapps an optional dependency (on by default)
    - Libbamf: Some signal, type and annotation fixes
    - libbamf: gir-annotion fixes and make gi-scanner verbose
    - Autoconf: Exclude generated sources from tarball and fix "make 
      distcheck".
    - BamfMatcher: add support for libreoffice Base, and libreoffice matching 
      tests (LP: #1063862)

  [ Didier Roche ]
  * debian/bamfdaemon.postinst:
    - Fix bamf.index perl script generation to fix UOA g-c-c panel associated
      with empathy. (LP: #1045223)
