@@ -14,11 +14,8 @@ Build-Depends: dbus-x11,
                gtk-doc-tools,
                gobject-introspection (>= 0.6.5-3),
                libgirepository1.0-dev,
-               gir1.2-atk-1.0,
                gir1.2-glib-2.0,
                gir1.2-gtk-3.0 (>= 3.0.0),
-               gir1.2-pango-1.0,
-               gir1.2-wnck-3.0,
                libunity-webapps-dev (>= 2.3.3),
                xvfb,
 Standards-Version: 3.9.3
@@ -94,15 +91,16 @@ Description: Window matching library - debugging symbols
  .
  This package contains debugging symbols for the daemon and library.
 
-#Package: gir1.2-bamf-0.2
-#Section: libs
-#Architecture: any
-#Depends: ${gir:Depends},
-#         ${shlibs:Depends},
-#         ${misc:Depends}
-#Description: GObject introspection data for the Bamf 0 library
-# This package contains introspection data for the Bamf library.
-# .
-# It can be used by packages using the GIRepository format to generate
-# dynamic bindings.
+Package: gir1.2-bamf-0.2
+Section: libs
+Architecture: any
+Depends: ${gir:Depends},
+         ${shlibs:Depends},
+         ${misc:Depends},
+         libbamf3-1 (= ${binary:Version}),
+Description: GObject introspection data for the Bamf library
+ This package contains introspection data for the Bamf library.
+ .
+ It can be used by packages using the GIRepository format to generate
+ dynamic bindings.
 
