@@ -1,1 +1,2 @@
-#debian/tmp/usr/lib/girepository-1.0/
+usr/share/gir-1.0/Bamf-*.gir
+usr/lib/girepository-1.0/Bamf-*.typelib
