@@ -1,5 +1,0 @@
-debian/tmp/usr/include/libbamf/libbamf/
-debian/tmp/usr/lib/*/pkgconfig/libbamf.pc
-debian/tmp/usr/lib/*/libbamf.so
-#debian/tmp/usr/share/vala/vapi/
-#debian/tmp/usr/share/gir-1.0/
