@@ -1,5 +1,4 @@
 debian/tmp/usr/include/libbamf3/libbamf/
 debian/tmp/usr/lib/*/pkgconfig/libbamf3.pc
 debian/tmp/usr/lib/*/libbamf3.so
-#debian/tmp/usr/share/vala/vapi/
-#debian/tmp/usr/share/gir-1.0/
+debian/tmp/usr/share/vala/vapi/
